# jaxbm

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
archive/: utils.py
examples/: mnist_config.py  mnist_training.py
jaxbm/: __init__.py  _loop.py  _sampler.py  sample.py
src/jax_bm/: __init__.py  _loop.py  _sampler.py  bm.py  mnist_training.py  plot.py  sample.py  sampling.py  statistics.py
tests/: conftest.py  test_bm.py  test_loop.py  test_package.py  test_sample.py  test_sampler.py  test_sampling.py  test_statistics.py  test_training.py  test_utils.py
