[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaxbm"
version = "0.0.1"
description = "JAX-based simulations of Boltzmann machines."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Inhoo Lee" }]
keywords = ["jax", "boltzmann-machine", "rbm", "physics", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.8",
]
viz = [
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/inhoolee/jax-bm"
Issues = "https://github.com/inhoolee/jax-bm/issues"

[tool.hatch.build.targets.wheel]
packages = ["jaxbm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "NPY"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
